Fix overflow text

--- a/_sass/reset.sass
+++ b/_sass/reset.sass
@@ -26,7 +26,7 @@ h1
 h2
   font-size: 2.5em
   letter-spacing: .5em
-  line-height: 2em
+  line-height: 1.2em
   text-transform: uppercase
 
 h3
